@@ -70,14 +70,6 @@ compiler/platform combinations:
 
 <td><font size=-1>SPARC</font></td>
 
-<td><font size=-1>egcs 1.1.1</font></td>
-</tr>
-
-<tr>
-<td><font size=-1>Solaris 2.6</font></td>
-
-<td><font size=-1>SPARC</font></td>
-
 <td><font size=-1>egcs 1.1.2</font></td>
 </tr>
 
@@ -106,8 +98,8 @@ compiler/platform combinations:
 </tr>
 </table>
 
-<p>User's of Magick++ have reported that the following configurations appear
-to work with Magick++:
+<p>User's of Magick++ have reported that the following configurations work
+with Magick++:
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
 <caption><b>Other Working Configurations</b></caption>
@@ -177,6 +169,16 @@ to work with Magick++:
 
 <td><font size=-1>Albert Chin-A-Young &lt;china@thewrittenword.com></font></td>
 </tr>
+
+<tr>
+<td><font size=-1>Mac OS 8.1?</font></td>
+
+<td><font size=-1>PowerPC</font></td>
+
+<td><font size=-1>CodeWarrior Professional Release 5</font></td>
+
+<td><font size=-1>Leonard Rosenthol &lt;leonardr@digapp.com></font></td>
+</tr>
 </table>
 
 <p>Please let me know if you have successfully built and executed Magick++
@@ -188,7 +190,7 @@ configurations.
 
 <center>
 <h3>
-UNIX/Linux</h3></center>
+Unix/Linux</h3></center>
 
 <h4>
 Building From Source</h4>
