@@ -13,22 +13,24 @@
 This is Magick++, the object-oriented C++ API to the <a href="http://www.wizards.dupont.com/cristy/ImageMagick.html">ImageMagick</a>
 image-processing library.
 <p>Magick++ supports an object model which is inspired by <a href="http://www.wizards.dupont.com/cristy/www/perl.html">PerlMagick</a>.
-Magick++ executes faster than PerlMagick since it is written in a compiled
-language which is not parsed at run-time. This makes it more suitable for
-Web CGI programs which must start-up quickly. Images support implicit reference
-counting so that copy constructors and assignment incur almost no cost.
-The cost of actually copying an image (if necessary) is done just before
-modification and this copy is managed automatically by Magick++. De-referenced
-copies are automatically deleted. The image objects support value (rather
-than pointer)&nbsp; semantics so it is trivial to support multiple generations
-of an image in memory at one time.
+Magick++ executes faster than PerlMagick since it is accessed from a compiled
+language rather than from a scripting language. This makes it more suitable
+for Web CGI programs which must start-up and execute quickly. Images support
+implicit reference counting so that copy constructors and assignment incur
+almost no cost. The cost of actually copying an image (if necessary) is
+done just before modification and this copy is managed automatically by
+Magick++. De-referenced copies are automatically deleted. The image objects
+support value (rather than pointer)&nbsp; semantics so it is trivial to
+support multiple generations of an image in memory at one time.
 <p>Magick++ provides integrated support for STL. This support allows Magick++
 to be used with the <a href="http://www.sgi.com/Technology/STL/">Standard
 Template Library</a> (STL) so that the powerful containers available (e.g.
-vector and list)&nbsp; can be used to write programs similar to those possible
-with PERL &amp; PerlMagick. STL-compatable template versions of ImageMagick's
-list-style operations are provided so that operations may be performed
-on multiple images stored in STL containers.
+<a href="http://www.sgi.com/Technology/STL/Deque.html">deque</a>, <a href="http://www.sgi.com/Technology/STL/Vector.html">vector</a>,
+<a href="http://www.sgi.com/Technology/STL/List.html">list</a>, and <a href="http://www.sgi.com/Technology/STL/Map.html">map</a>)&nbsp;
+can be used to write programs similar to those possible with PERL &amp;
+PerlMagick. STL-compatable template versions of ImageMagick's list-style
+operations are provided so that operations may be performed on multiple
+images stored in STL containers.
 <p>Please be aware that until Magick++ reaches version 1.0, some minor
 changes may be expected to implemented APIs based on operational experience.
 <center>
@@ -51,7 +53,20 @@ Magick++ Source Packages</h4>
 ]
 <ul>
 <li>
-Version 0.8.9 (tested with ImageMagick 4.2.9)</li>
+Version 0.9.0 (compatible with ImageMagick 5.0 Beta)</li>
+
+<ul>
+<li>
+<a href="ftp://ftp.simplesystems.org/pub/Magick++/Magick++-0.9.0.tar.gz">Magick++-0.9.0.tar.gz</a>
+(gzip'ed tar format, 472K)</li>
+
+<li>
+<a href="ftp://ftp.simplesystems.org/pub/Magick++/Magick++-0.9.0.zip">Magick++-0.9.0.zip</a>
+(PK-ZIP format, 504K)</li>
+</ul>
+
+<li>
+Version 0.8.9 (compatible with ImageMagick 4.2.9)</li>
 
 <ul>
 <li>
@@ -64,7 +79,7 @@ Version 0.8.9 (tested with ImageMagick 4.2.9)</li>
 </ul>
 
 <li>
-Version 0.8.5 (tested with ImageMagick 4.2.8)</li>
+Version 0.8.5 (compatible with ImageMagick 4.2.8)</li>
 
 <ul>
 <li>
@@ -77,7 +92,7 @@ Version 0.8.5 (tested with ImageMagick 4.2.8)</li>
 </ul>
 
 <li>
-Version 0.8.4&nbsp; (tested with ImageMagick 4.2.7)</li>
+Version 0.8.4&nbsp; (compatible with ImageMagick 4.2.7)</li>
 
 <ul>
 <li>
